member와 course를 manytomany에서 중간에 테이블을 추가하는 형태로 변경