@@ -1,7 +1,10 @@
 package com.ll.edubridge.domain.member.member.controller;
 
 
+import com.ll.edubridge.domain.CourseVoter.entity.CourseVoter;
+import com.ll.edubridge.domain.CourseVoter.service.CourseVoterService;
 import com.ll.edubridge.domain.course.course.dto.CourseDto;
+import com.ll.edubridge.domain.course.course.entity.Course;
 import com.ll.edubridge.domain.course.course.service.CourseService;
 import com.ll.edubridge.domain.member.member.dto.MemberDto;
 import com.ll.edubridge.domain.member.member.dto.MyPageDto;
@@ -20,6 +23,7 @@ import org.springframework.lang.NonNull;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @RestController
@@ -29,6 +33,7 @@ public class ApiV1MemberController {
     private final MemberService memberService;
     private final Rq rq;
     private final CourseService courseService;
+    private final CourseVoterService courseVoterService;
 
     public record LoginRequestBody(@NotBlank String username, @NotBlank String password) {
     }
@@ -122,7 +127,11 @@ public class ApiV1MemberController {
                 .stream()
                 .map(courseEnroll -> new CourseDto(courseEnroll.getCourse(), member))
                 .collect(Collectors.toList());
-        List<CourseDto> likeCourses = courseService.findByVoter(member).stream().map(course -> new CourseDto(course,member)).collect(Collectors.toList());
+
+        member.getCourseVoters().stream().forEach(courseVoter1 -> System.out.println(courseVoter1.getMember() + " voted for " + courseVoter1.getCourse()));
+
+
+        List<CourseDto> likeCourses = member.getCourseVoters().stream().map(courseVoter -> new CourseDto(courseVoter.getCourse(), member)).toList();
 
         MyPageDto myPageDto = new MyPageDto(learningCourses,likeCourses,memberDto);
         return RsData.of("200","성공",
